...

            if self.viewModel.loginStatus == .signed {

                Text("Hello \(self.viewModel.username)!")
                    .padding()

                Button("View Players") {
                    self.delegate?.onViewPlayersBtn()
                }
                .padding()

                Button("Open Game") {
                    self.delegate?.onOpenGameBtn()
...
            SecureField("password", text: self.$viewModel.password)
                .textFieldStyle(.roundedBorder)
                .padding()

            if case .notSigned(let error) = self.viewModel.loginStatus {

                Button("SignIn") {
                    self.delegate?.onSignInBtn()
                }
                .padding()

                if let errMsg = error {
                    Text("Login error: \(errMsg)")
...
